# Algoritmo1Huffman_Canonico

./: ArbolHuffman.cpp  ArbolHuffman.h  CMakeLists.txt  CompresorHuffman.cpp  HuffmanCanonico.cpp  HuffmanCanonico.h  InfoCodigo.h  NodoComparador.cpp  NodoComparador.h  NodoHuffman.cpp  README.md  main.cpp
Informacion/: InfoCodigo.cpp
include/: ArbolHuffman.h  CompresorHuffman.h  HuffmanCanonico.h  NodoHuffman.h
src/: ArbolHuffman.cpp  CompresorHuffman.cpp  HuffmanCanonico.cpp  NodoComparador.cpp  NodoHuffman.cpp  main.cpp
